--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">Css</li>
     <li><a href="3.html">JavaScript</li>
   </ol>
-  <h2>hello web! 반가워! </h2>
+  hello web! 반가워!
   <a href="https://blog.naver.com/PostList.nhn?blogId=mell_lli&from=postList&categoryNo=42"
   target="_blank" title="소작문으로 바로 이동">my new coding life!</a> I should have <strong>bought <u>a desktop</u></strong>
   <p style="margin-top:30px;"><p><img src="home.jpg" width="280"></p>
